--- a/1520/ch05/5-5/styles.css
+++ b/1520/ch05/5-5/styles.css
@@ -55,6 +55,7 @@ body {
    box-shadow:         10px 0px 10px rgba(50, 50, 50, 1),
                        0px 10px 10px rgba(50, 50, 50, 1),
                        -10px 0px 10px rgba(50, 50, 50, 1);
+    margin-bottom: 1000px;
 }
 
 ol, ul {
