finished first assignment

--- a/1520/case/static/css/main.css
+++ b/1520/case/static/css/main.css
@@ -20,7 +20,7 @@ body, html {
 }
 
 .pimg1 {
-  background-image: url(https://source.unsplash.com/njDePTtXMyU);
+  background-image: url(https://source.unsplash.com/mKA3VavSuaI);
   min-height: 100%;
 }
 
