fixing image problem

--- a/1520/case/static/css/hangman.css
+++ b/1520/case/static/css/hangman.css
@@ -29,7 +29,7 @@
 /* CSS for the web Page */
 
 body {
-  background-image: url(https://source.unsplash.com/hpX5-me5Lug);
+  background-image: url(https://docs.google.com/uc?export=download&id=0B5nwes1oxhrpdkMtMGRjZUJrMlk);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
