--- a/1520/case/static/css/main.css
+++ b/1520/case/static/css/main.css
@@ -20,7 +20,7 @@ body, html {
 }
 
 .pimg1 {
-  background-image: url(https://source.unsplash.com/mKA3VavSuaI);
+  background-image: url(https://docs.google.com/uc?export=download&id=0B5nwes1oxhrpOXdKSllyQ0F2LWs);
   min-height: 100%;
 }
 
@@ -30,7 +30,7 @@ body, html {
 }
 
 .pimg3 {
-  background-image: url(https://source.unsplash.com/tk2_RBZq7RA);
+  background-image: url(https://docs.google.com/uc?export=download&id=0B5nwes1oxhrpemdmYkczUmVBMEU);
   min-height: 400px;
 }
 
