--- a/1520/case/static/css/tic.css
+++ b/1520/case/static/css/tic.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://source.unsplash.com/21FqSKZQGzI);
+    background-image: url(https://docs.google.com/uc?export=download&id=0B5nwes1oxhrpWGx1aWFNbDdvQXM);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -17,6 +17,7 @@ h1 {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  margin-top: 50px;
 }
 
 .heading_title {
