--- a/1520/midterm/index.css
+++ b/1520/midterm/index.css
@@ -52,3 +52,11 @@ input {
   flex-direction: column;
   align-items: center;
 }
+
+@media only all and (max-width: 768px){
+
+  main {
+    flex-direction: column;
+  }
+
+}
