--- a/1520/case/static/css/about.css
+++ b/1520/case/static/css/about.css
@@ -69,5 +69,23 @@ footer {
   color: #b5b5b5;
 }
 
+/* Media Queries */
+@media only all and (max-width: 768px){
+
+  header {
+    background-attachment: scroll;
+  }
+
+  .header_title_div {
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: center;
+  }
+
+}
+
+
+
+
 
 
