modified home page and other minor changes

--- a/1520/case/static/css/about.css
+++ b/1520/case/static/css/about.css
@@ -79,10 +79,17 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin-top: 10px;
 }
 
 .footer_heading {
   color: #b5b5b5;
+}
+
+i:hover {
+  background-color: orange;
+  border-radius: 3px;
+  padding: 2px;
 }
 
 
