--- a/1520/final/assets/css/final.css
+++ b/1520/final/assets/css/final.css
@@ -35,6 +35,46 @@ img {
   padding: 8px;
 }
 
+/* CSS for header area */ 
+header {
+  margin-top: 50px;
+  background-image: url(../img/cookie_one.jpg);
+  height: 400px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+/* CSS for main area */
+main {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.section_one {
+  display: flex;
+  flex-direction: row;
+  border: 2px solid blue;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.section_two {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  border: 2px solid red;
+}
+
+/* CSS for footer section */
+footer {
+  background-color: #18A755;
+  height: 200px;
+}
 
 /* Media Queries */ 
 @media only all and (max-width: 768px){
