finished basic draft of project

--- a/1520/final/assets/css/final.css
+++ b/1520/final/assets/css/final.css
@@ -70,6 +70,11 @@ form {
   border: 2px solid red;
 }
 
+.order_info {
+  border: 2px solid blue;
+  display: none;
+}
+
 /* CSS for footer section */
 footer {
   background-color: #18A755;
