fixed form issues

--- a/1520/final/assets/css/final.css
+++ b/1520/final/assets/css/final.css
@@ -12,6 +12,10 @@ body {
   margin-right: 10%;
 }
 
+.center {
+  text-align: center;
+}
+
 /* CSS for navbar */ 
 
 nav {
@@ -55,18 +59,33 @@ main {
 .section_one {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   border: 2px solid blue;
 }
 
 form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+label {
+  float: left;
+  display: block;
+  width: 10em;
+  padding-right: 1em;
+}
+
+input {
+  display: block;
+  width: 18em;
 }
 
 .section_two {
   margin-top: 30px;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   border: 2px solid red;
 }
 
