--- a/1520/final/assets/css/final.css
+++ b/1520/final/assets/css/final.css
@@ -42,13 +42,70 @@ img {
 /* CSS for header area */ 
 header {
   margin-top: 50px;
-  background-image: url(../img/cookie_one.jpg);
+/*  background-image: url(../img/cookie_one.jpg);*/
+/*  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;*/
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.slide {
   height: 400px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
+.slide1 {
+  background-image: url(../img/cookie_one.jpg)
+}
+
+.slide2 {
+  background-image: url(../img/logo.jpg)
+}
+
+.slide3 {
+  background-image: url(../img/scout.jpg)
+}
+
+.slide-content {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.slide-content span {
+  font-size: 5rem;
+  color: white;
+}
+
+/*.arrow {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  margin-top: -40px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+#arrow-left {
+  border-width: 30px 40px 30px 0;
+  border-color: transparent #fff transparent transparent;
+  left: 0;
+  margin-left: 30px;
+}
+
+#arrow-right {
+  border-width: 30px 0 30px 40px;
+  border-color: transparent transparent transparent #fff ;
+  right: 0;
+  margin-right: 30px;
+}*/
 
 /* CSS for main area */
 main {
