--- a/1520/final/assets/css/final.css
+++ b/1520/final/assets/css/final.css
@@ -16,6 +16,13 @@ body {
   text-align: center;
 }
 
+button {
+  border-color: #ed8f02;
+  background-color: #ed8f02;
+  color: white;
+  border-radius: 8px;
+}
+
 /* CSS for navbar */ 
 
 nav {
@@ -49,10 +56,6 @@ img {
 /* CSS for header area */ 
 header {
   margin-top: 200px;
-/*  background-image: url(../img/cookie_one.jpg);*/
-/*  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;*/
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   position: relative;
@@ -104,7 +107,13 @@ main {
   border: 2px solid blue;
 }
 
-form {
+.form_style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cookie_section {
   display: flex;
   flex-direction: column;
   align-items: center;
