--- a/1520/final/assets/css/final.css
+++ b/1520/final/assets/css/final.css
@@ -104,7 +104,9 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  border: 2px solid blue;
+/*  border: 2px solid blue;*/
+  padding-bottom: 30px;
+  border-bottom: 3px solid black;
 }
 
 .form_style {
@@ -147,7 +149,7 @@ label {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  border: 2px solid red;
+/*  border: 2px solid red;*/
 }
 
 .order_info {
